# competitive-programming

./: .gitignore  README.md
Google Code Jam/: Cargo.toml  Makefile
Google Code Jam/agagaxooorrr/: 1.ans  1.in  Cargo.toml
Google Code Jam/appendsort/: 1.in  1.out  Cargo.toml
Google Code Jam/babyehabpartitionagain/: Cargo.toml
Google Code Jam/basicdiplomacy/: 1.ans  1.in  1.out  Cargo.toml
Google Code Jam/brokenclock/: Cargo.toml
Google Code Jam/cheatingdetection/: Cargo.toml
Google Code Jam/checksum/: Cargo.toml
Google Code Jam/closestpick/: 1.in  1.out  Cargo.toml
Google Code Jam/consecutiveprimes/: Cargo.toml
Google Code Jam/cut/: 1.in  Cargo.toml
Google Code Jam/increasingsequencecardgame/: main.py
Google Code Jam/increasingsubstring/: Cargo.toml
Google Code Jam/kgoodness/: Cargo.toml
Google Code Jam/longestprogession/: 1.ans  1.in  1.out  Cargo.toml
Google Code Jam/lshaped/: Cargo.toml
Google Code Jam/mediansort/: Cargo.toml
Google Code Jam/moonsandumbrella/: Cargo.toml
Google Code Jam/nestingdepth/: 1.ans  1.in  1.out  Cargo.toml
Google Code Jam/palindromiccrossword/: 1.out  Cargo.toml
Google Code Jam/primetime/: 1.in  2.ans  2.in  Cargo.toml
Google Code Jam/prisonbreak/: Cargo.toml
Google Code Jam/rabbithouse/: Cargo.toml
Google Code Jam/restoremodulo/: 1.in  1.out  Cargo.toml
Google Code Jam/reversesort/: 1.in  1.out  Cargo.toml
Google Code Jam/reversortengineering/: 1.in  1.out  Cargo.toml
Kattis/: .gitignore  Cargo.toml  Makefile  codecleanups.in  codecleanups.py  howl.in  howl.py  logs  run.sh
Kattis/cd/: 1.in  (+1 more)
(+651 files in other folders)
