[workspace]
members = ["cd", "joinstrings", "sim", "backspace", "different", "tools", "thelastproblem", "quadrant", "leftbeehind", "oddgnome", "treasurehunt", "lineup", "pokerhand", "bossbattle", "bitsequalizer", "basicprogramming1", "memorymatch", "chess", "guessinggame", "gamerank", "rockpaperscissors", "rockscissorspaper", "tictactoe2", "tictactoe", "wertyu", "beatspread", "tenis", "birthdayboy", "tgif", "rimski", "tripletexting", "genealogical", "okvir", "okviri", "averagespeed", "rationalratio"]
